
namespace java com.chen.demo.thrift

service IHelloWorldService{
    string sayHello(1:string name);
}